--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.2",
+    "@react-navigation/native": "^6.1.1",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-paper": "^5.1.2",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
+    "react-native-svg": "^13.6.0",
     "react-native-vector-icons": "^9.2.0",
     "styled-components": "^5.3.6"
   },
