--- a/package.json
+++ b/package.json
@@ -6,18 +6,24 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "check-dependencies": "rnx-align-deps",
+    "fix-dependencies": "rnx-align-deps --write"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/bottom-tabs": "^6.5.2",
-    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/stack": "^6.2.0",
     "camelize": "^1.0.1",
+    "eslint-plugin-react": "^7.31.11",
     "react": "18.1.0",
-    "react-native": "0.70.6",
+    "react-native": "^0.70.0",
+    "react-native-gesture-handler": "^2.8.0",
     "react-native-paper": "^5.1.2",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
-    "react-native-svg": "^13.6.0",
+    "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^9.2.0",
     "styled-components": "^5.3.6"
   },
@@ -25,12 +31,37 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@rnx-kit/align-deps": "^2.0.1",
     "babel-jest": "^26.6.3",
+    "eslint": "^7.32.0",
+    "eslint-plugin-react-native": "^4.0.0",
     "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "0.72.3",
+    "metro-react-native-babel-preset": "^0.72.1",
     "react-test-renderer": "18.1.0"
   },
   "jest": {
     "preset": "react-native"
+  },
+  "rnx-kit": {
+    "kitType": "app",
+    "alignDeps": {
+      "requirements": [
+        "react-native@0.70"
+      ],
+      "capabilities": [
+        "babel-preset-react-native",
+        "core",
+        "core-android",
+        "core-ios",
+        "jest",
+        "navigation/native",
+        "navigation/stack",
+        "react",
+        "react-test-renderer",
+        "safe-area",
+        "screens",
+        "svg"
+      ]
+    }
   }
 }
